# jvm-macros

./: .cirrus.yml  .travis.yml  BUILD.bazel  README.md  build.sbt
.github/: settings.yml
project/: plugins.sbt
src/main/scala/im/tox/tox4j/: EnumerationMacros.scala  OptimisedIdOps.scala
src/test/scala/im/tox/tox4j/: OptimisedIdOpsTest.scala
